--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
  		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.discovery.commons</artifactId>
-			<version>1.0.12</version>
+			<version>1.0.17-SNAPSHOT</version>
   		</dependency>
         <!-- besides including discovery.commons' normal jar above, 
               for testing a few test helper classes are also reused.
@@ -177,7 +177,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.discovery.commons</artifactId>
-            <version>1.0.12</version>
+            <version>1.0.17-SNAPSHOT</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
