--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.johnzon</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.jcr.api</artifactId>
@@ -214,12 +220,6 @@
 			<artifactId>httpclient-osgi</artifactId>
 			<version>4.3.5</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.sling</groupId>
-			<artifactId>org.apache.sling.commons.json</artifactId>
-			<version>2.0.6</version>
-            <scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -319,6 +319,12 @@
           <artifactId>org.apache.sling.testing.sling-mock</artifactId>
           <version>1.2.0</version>
           <scope>test</scope>
+          <exclusions>
+          <exclusion>
+          <groupId>org.apache.sling</groupId>
+          <artifactId>org.apache.sling.commons.json</artifactId>
+          </exclusion>
+          </exclusions>
         </dependency>
     </dependencies>
 </project>
