--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
  		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.discovery.commons</artifactId>
-			<version>1.0.21-SNAPSHOT</version>
+			<version>1.0.20</version>
   		</dependency>
         <!-- besides including discovery.commons' normal jar above, 
               for testing a few test helper classes are also reused.
@@ -189,7 +189,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.discovery.commons</artifactId>
-            <version>1.0.21-SNAPSHOT</version>
+            <version>1.0.20</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
