use org.apache.sling.discovery.commons 1.0.20 (1.0.22 was dropped due to johnzon requiring JRE 7 already, thus doesn't make sense to restrict commons to 6 anymore)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1800674 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
  		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.discovery.commons</artifactId>
-			<version>1.0.23-SNAPSHOT</version>
+			<version>1.0.20</version>
   		</dependency>
         <!-- besides including discovery.commons' normal jar above, 
               for testing a few test helper classes are also reused.
