--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!-- OSGi Dependencies -->
@@ -155,7 +156,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.discovery.commons</artifactId>
-            <version>1.0.26</version>
+            <version>1.0.24</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
