--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-discovery-base.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-discovery-base.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-discovery-base.git</url>
+        <url>https://github.com/apache/sling-org-apache-sling-discovery-base.git</url>
         <tag>HEAD</tag>
     </scm>
 
