--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Felix Health Check API -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.healthcheck.api</artifactId>
+            <version>2.0.4</version>
+            <scope>provided</scope>
+        </dependency>
+
       <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
