--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,6 @@
 
     <properties>
         <jackrabbit.version>2.14.3</jackrabbit.version>
-        <!-- by default Slow tests are excluded - use -PincludeSlowTests to include them -->
-        <sling.excluded.surefire.groups>org.apache.sling.commons.testing.junit.categories.Slow</sling.excluded.surefire.groups>
     </properties>
 
     <build>
@@ -101,14 +99,14 @@
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-json_1.0_spec</artifactId>
-            <version>1.0-alpha-1</version>
+            <artifactId>geronimo-json_1.1_spec</artifactId>
+            <version>1.5</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.jcr.api</artifactId>
-			<version>2.1.0</version>
+			<version>2.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -148,7 +146,7 @@
  		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.discovery.commons</artifactId>
-			<version>1.0.24</version>
+			<version>1.0.29-SNAPSHOT</version>
   		</dependency>
         <!-- besides including discovery.commons' normal jar above, 
               for testing a few test helper classes are also reused.
@@ -156,14 +154,14 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.discovery.commons</artifactId>
-            <version>1.0.24</version>
+            <version>1.0.29-SNAPSHOT</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.api</artifactId>
-			<version>2.5.0</version>
+			<version>2.22.0</version>
             <scope>provided</scope>
 		</dependency>
         <dependency>
@@ -214,6 +212,16 @@
             <artifactId>junit-addons</artifactId>
             <version>1.4</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>xerces</groupId>
+                    <artifactId>xercesImpl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>xerces</groupId>
+                    <artifactId>xmlParserAPIs</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -221,29 +229,26 @@
             <version>4.4.0</version>
             <scope>test</scope>
         </dependency>
+        
+        <!-- Sling Mock Dependencies -->
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.testing.sling-mock.junit4</artifactId>
+            <version>3.5.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
+            <version>1.6.8</version>
+            <scope>test</scope>
+        </dependency>
+        
         <dependency>
         	<groupId>org.apache.jackrabbit</groupId>
         	<artifactId>jackrabbit-jcr-commons</artifactId>
         	<version>${jackrabbit.version}</version>
         	<scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>org.apache.sling</groupId>
-        	<artifactId>org.apache.sling.commons.testing</artifactId>
-        	<version>2.0.26</version>
-        	<scope>test</scope>
-            <exclusions>
-                <!-- slf4j simple implementation logs INFO + higher to stdout (we don't want that behaviour) -->
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-                <!--  also excluding jcl-over-slf4j as we need a newer vesion of this which is compatible with slf4j 1.6 -->
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>jcl-over-slf4j</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         
         <!-- using log4j under slf4j to allow fine-grained logging config (see src/test/resources/log4j.properties) -->
@@ -256,8 +261,14 @@
         <dependency>
         	<groupId>org.apache.sling</groupId>
         	<artifactId>org.apache.sling.jcr.resource</artifactId>
-        	<version>2.3.8</version>
+        	<version>2.7.4</version>
         	<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
         </dependency>
 	    <dependency>
 			<groupId>log4j</groupId>
@@ -277,23 +288,6 @@
             <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.testing.sling-mock.junit4</artifactId>
-            <version>3.2.2</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
-    <profiles>
-        <profile>
-            <!-- when -PincludeSlowTests is set, the Slow tests should also be executed,
-                hence unsetting the category excludes 'sling.excluded.surefire.groups' to
-                achieve that. -->
-            <id>includeSlowTests</id>
-            <properties>
-                <sling.excluded.surefire.groups />
-            </properties>
-        </profile>
-    </profiles>
 </project>
