--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
  		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.discovery.commons</artifactId>
-			<version>1.0.29-SNAPSHOT</version>
+			<version>1.1.0</version>
   		</dependency>
         <!-- besides including discovery.commons' normal jar above, 
               for testing a few test helper classes are also reused.
@@ -154,7 +154,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.discovery.commons</artifactId>
-            <version>1.0.29-SNAPSHOT</version>
+            <version>1.1.0</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
